# Smart_Home_AI_Voice_Assistan

./: APP配置参数.txt  DEVICES-CONNECT-KEY-69ce6bd8e094d615922d9e08_Smart_Home.txt  README.md  RELEASE.md  云平台配置参数.txt  华为云数据格式.txt  新建 DOCX 文档.docx  笔记.docx  语音交互功能设计方案.md
.claude/: settings.local.json
ESP32-S3配置文件/: sdkconfig
Smart_home/MDK-ARM/: Smart home.uvguix.GEFEI  Smart home.uvoptx
Smart_home/MyApp/: esp01s.c
Smart_home_ESP32-S3/: CMakeLists.txt
Smart_home_ESP32-S3/main/: main.c
Smart_home_STM32/: .mxproject  Smart home.ioc
Smart_home_STM32/MDK-ARM/: Smart home.uvguix.GEFEI  Smart home.uvoptx  Smart home.uvprojx  startup_stm32f103xb.lst
Smart_home_STM32/MyApp/: OLED_Font.h  buzzer.c  buzzer.h  esp01s.c  esp01s.h  (+10 more)
smart_home_android/: GRADLE_FIX_GUIDE.md  README.md  build.gradle  local.properties  settings.gradle
smart_home_flutter/: README.md  pubspec.yaml
speech_commands_recognition_with_llm/: README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
speech_commands_recognition_with_llm/main/: CMakeLists.txt  audio_manager.cc  main.cc  wifi_manager.cc
speech_commands_recognition_with_llm/main/mock_voices/: custom.h
xiaozhi-replica-main/: .gitignore  README.md
毕业设计/: 2026附件1：过程记录本范本.doc  a631ed52-f8f9-49d2-97fa-12a295ba7f23.docx  任务书参考1.docx  任务书参考2.docx  开题报告完善内容.txt  徐海学院本科生毕业设计（论文）撰写规范 （2026 届） 计算机系各专业.docx  徐海学院本科生毕业设计（论文）模版 （2026届）计算机系各专业专业：备注版.doc  毕设开题报告 物联网22-1班葛飞.docx  毕设开题报告 物联网22-1班葛飞3.8.docx  毕设开题报告 计嵌20-2班徐翔宇3月10号.docx  毕设课题资料.docx  物联网22-1葛飞毕业论文.doc  物联网22-1葛飞的任务书.docx  计算机各专业2026届毕业设计（论文）模板.rar  过程记录-参考.docx
(+189 files in other folders)
